major fish datagen rework